[package]
name = "blog-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.42.1", features=["serve-static","session","jwt-auth"]}
tokio = { version = "1.29.1", features = ["macros"] }
sea-orm = { version = "0.11.0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
serde_json = "1.0.89"
tracing-subscriber = {version = "0.3.17",features = ["env-filter","time","local-time"]}
tracing = "0.1"
tera = "1.17.1"
anyhow = "1.0.66"
serde="1.0.148"
jsonwebtoken = "8.0"
md5 = "0.7.0"
chrono = "0.4.23"
tracing-appender = "0.2.2"
time ={ version = "0.3.22",features = ["macros"] }
