[package]
name = "blog-rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.89", features = [
    "serve-static",
    "session",
    "jwt-auth",
    #"rate-limiter",
    "compression",
    #"logging",
] }
tokio = { version = "1.45.1", features = ["macros"] }
sea-orm = { version = "1.1.12", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
serde_json = "1.0.140"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "time",
    "local-time",
] }
tracing = "0.1.41"
tera = "1.20.0"
anyhow = "1.0.98"
serde = "1.0.219"
jsonwebtoken = "9.3.1"
md5 = "0.7.0"
chrono = "0.4.41"
tracing-appender = "0.2.3"
time = { version = "0.3.41", features = ["macros"] }
url_encor = "1.0.3"
redis = { version = "0.32.0", features = ["tokio-comp"] }
resend-rs = "0.15.0"
rand = "0.9.1"
checkmail = "0.1.1"
#openssl = { version = "0.10", features = ["vendored"] }
#url = "2.5.4"
